# linkedin-industry-codes-v2

./: CHANGELOG.md  LICENSE  README.md  industry_codes_translation.py  linkedin_industry_code_v2_all_ptbr.csv  linkedin_industry_code_v2_all_ptbr_with_header.csv  linkedin_industry_code_v2_ptbr.json  pyproject.toml
